--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "element-ui": "^2.4.0",
+    "leancloud-storage": "^3.7.3",
     "node-sass": "^4.9.0",
     "vue": "^2.5.16",
     "vuex": "^3.0.1"
